[WIP] Create card component with custom titles and images, test cards on page.jsx

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,11 @@
 @import "tailwindcss";
 
 @theme inline {
+  --color-accent-dark-gray: #333;
+
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
